--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -3,7 +3,7 @@
         "browser": true,
         "es2021": true
     },
-    "extends": ["airbnb-base","plugin:prettier/recommended"],
+    "extends": "airbnb-base",
     "overrides": [
     ],
     "parserOptions": {
